--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -92,6 +92,11 @@ ul {
             background-color: burlywood;
             color: black
         }
+
+        &.selected{
+            background-color: black;
+            color: white
+        }
     }
 }
 
