--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -182,7 +182,9 @@
   </div>
 </main>
 
-
+<!-- todo -->
+<!-- multiple teams in LS -->
+<!-- stats for teams from LS and current -->
 
 
 <router-outlet />
