--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -133,10 +133,10 @@
         <button *ngIf="team.length > 0" (click)="clearTeam()">Clear team</button>
         <button *ngIf="team.length > 0" (click)="saveForLater()">Save For Later</button>
       </section>
-      <section>
+      <section *ngIf="historyTeams">
         <h4>History</h4>
         <!-- historyTeams -->
-        <ul class="athleteList" *ngFor="let team of historyTeams">
+        <ul class="athleteList" *ngFor="let team of historyTeams">          
           #{{team.number}}
           <li class="athlete" *ngFor="let athlete of team.data">
             <div class="name">{{ athlete.firstname }} {{ athlete.lastname }}</div>
@@ -144,14 +144,12 @@
               <div class="price">{{ athlete.value }}$ </div>
               <div class="points">{{ athlete.totalpoints }}</div>
               <div class="pricePerPoint">{{ athlete.pricePerPoint }}</div>
-              <div class="teamAction" *ngIf="!athlete.selected" (click)="selectAthlete(athlete)">+</div>
-              <div class="teamAction" *ngIf="athlete.selected" (click)="deselectAthlete(athlete)">-</div>
             </div>
           </li>
           <button (click)="deleteOneFromHistory(team.number)">delete this from history</button>
         </ul>
       </section>
-      <button (click)="clearHistory()">Clear History</button>
+      <button *ngIf="localStorageTeam" (click)="clearHistory()">Clear History</button>
     </div>
   </div>
   <div class="divider" role="separator" aria-label="Divider"></div>
