--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -9,6 +9,20 @@ main {
     position: relative;
 }
 
+  h1 {
+    font-size: 2.125rem;
+    color: var(--gray-900);
+    font-weight: 500;
+    line-height: 100%;
+    letter-spacing: -0.125rem;
+    margin: 0;
+    font-family: "Inter Tight", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+      Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+      "Segoe UI Symbol";
+      text-align: center;
+      margin: 0 0 18px 0;
+  }
+
 .teamAction {
     border-radius: 100%;
     border: 1px solid gray;
@@ -45,6 +59,9 @@ main {
     justify-content: space-between;
 
     section {
+        h2{
+            text-align: center;
+        }
         width: 50%;
     }
 }
