--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -142,7 +142,7 @@
   <div class="divider" role="separator" aria-label="Divider"></div>
   <div class="right-side">
     <section>
-      <h2>Use some filters, see what you get</h2>
+      <h2 *ngIf="!usedFilters">Use some filters, see what you get</h2>
       <ul *ngIf="filteredAthletes.length > 0" class="athleteList">
         <li class="athlete">
           <div class="name">Name</div>
