--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -120,7 +120,7 @@
         <button *ngIf="team.length > 0" (click)="clearTeam()">Clear team</button>
         <button *ngIf="team.length > 0" (click)="saveForLater()">Save For Later</button>
       </section>
-      <section *ngIf="historyTeams">https://fantasy-olive.vercel.app/
+      <section *ngIf="historyTeams">
         <h4>History</h4>
         <!-- historyTeams -->
         <ul class="athleteList" *ngFor="let team of historyTeams">          
