--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -32,6 +32,7 @@ main {
     line-height: 20px;
     margin: 0 10px 0 0;
     cursor: pointer;
+    user-select: none;
 
     &:hover {
         background-color: aquamarine;
@@ -49,7 +50,6 @@ main {
     display: flex;
     justify-content: center;
     align-items: flex-start;
-
 }
 
 .right-side {
