smaller filter box

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -81,7 +81,7 @@
           </select>
           <br>
           <h3>Filters</h3>
-          <div class="filter-row">
+          <div class="filter-row checkbox">
             <label for="injuryFilter">injury</label>
             <input type="checkbox" id="injuryFilter" [(ngModel)]="injuryfilter" (change)="applyFilters()">
           </div>
