--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -9,7 +9,7 @@ main {
     position: relative;
 }
 
-  h1 {
+h1 {
     font-size: 2.125rem;
     color: var(--gray-900);
     font-weight: 500;
@@ -17,11 +17,11 @@ main {
     letter-spacing: -0.125rem;
     margin: 0;
     font-family: "Inter Tight", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-      Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-      "Segoe UI Symbol";
-      text-align: center;
-      margin: 0 0 18px 0;
-  }
+        Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+        "Segoe UI Symbol";
+    text-align: center;
+    margin: 0 0 18px 0;
+}
 
 .teamAction {
     border-radius: 100%;
@@ -59,9 +59,10 @@ main {
     justify-content: space-between;
 
     section {
-        h2{
+        h2 {
             text-align: center;
         }
+
         width: 50%;
     }
 }
@@ -128,7 +129,7 @@ ul {
     font-family: Arial, sans-serif;
 
     label {
-        margin-top: 0.5rem;
+        margin-top: 0;
         font-weight: bold;
         font-size: 14px;
         width: 100%;
@@ -139,6 +140,21 @@ ul {
     .filter-row {
         margin-bottom: 0.5rem;
         width: 100%;
+
+        &.checkbox {
+            border-bottom: 1px solid gray;
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            label{
+                display: block;
+                clear: none;
+            }
+            input{
+                display: block;
+                clear: none;
+            }
+        }
 
         &.totalPoints {
             input {
@@ -172,4 +188,8 @@ ul {
             background-color: #0056b3;
         }
     }
+}
+
+h3 {
+    margin: 0
 }
