--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -106,15 +106,15 @@
         </div>
       </section>
       <section>
-        <h4 [ngClass]="{overBudget: sum>money}">Your Team {{sum | currency}}</h4>
-        <h4 [ngClass]="{overBudget: sum>money}">budget: {{budget | currency}}</h4>
+        <h4 [ngClass]="{overBudget: sum>money}">Your Team {{sum | currency: 'USD':'symbol':'1.0-0'}}</h4>
+        <h4 [ngClass]="{overBudget: sum>money}">budget: {{budget | currency: 'USD':'symbol':'1.0-0'}}</h4>
         <h4 class="errorMessage">{{errorMessage}}</h4>
         
         <ul class="athleteList" title="{{currentStats | json}}">
           <li class="athlete" *ngFor="let athlete of team">
             <div class="name">{{ athlete.firstname }} {{ athlete.lastname }}</div>
             <div class="data">
-              <div class="price">{{ athlete.value | currency}} </div>
+              <div class="price">{{ athlete.value | currency: 'USD':'symbol':'1.0-0'}} </div>
               <div class="points">{{ athlete.totalpoints }}</div>
               <div class="pricePerPoint">{{ athlete.pricePerPoint }}</div>
               <div class="teamAction" *ngIf="!athlete.selected" (click)="selectAthlete(athlete)">+</div>
@@ -129,12 +129,12 @@
         <h4>History</h4>
         <!-- historyTeams -->
         <ul class="athleteList" *ngFor="let team of historyTeams">
-          <div class="stats" title="{{team.stats | json}}">#{{team.number}} - stats / price: {{team.sum | currency}} leftovers: {{money-team.sum | currency}}</div>
+          <div class="stats" title="{{team.stats | json}}">#{{team.number}} - stats / price: {{team.sum | currency: 'USD':'symbol':'1.0-0'}} leftovers: {{money-team.sum | currency: 'USD':'symbol':'1.0-0'}}</div>
           
           <li class="athlete"  title="{{team.stats | json}}" *ngFor="let athlete of team.data">
             <div class="name">{{ athlete.firstname }} {{ athlete.lastname }}</div>
             <div class="data">
-              <div class="price">{{ athlete.value | currency}} </div>
+              <div class="price">{{ athlete.value | currency: 'USD':'symbol':'1.0-0'}} </div>
               <div class="points">{{ athlete.totalpoints }}</div>
               <div class="pricePerPoint">{{ athlete.pricePerPoint }}</div>
             </div>
@@ -160,7 +160,7 @@
         <li class="athlete" *ngFor="let athlete of filteredAthletes"
           [ngClass]="{overBudget: athlete.overBudget, selected: athlete.selected}">
           <div class="name"> {{ athlete.firstname }} {{ athlete.lastname }}</div>
-          <div class="price">{{ athlete.value | currency}} </div>
+          <div class="price">{{ athlete.value | currency: 'USD':'symbol':'1.0-0'}} </div>
           <div class="points">{{ athlete.totalpoints }}</div>
           <div class="pricePerPoint">{{ athlete.pricePerPoint }}</div>
           <div class="teamAction" *ngIf="!athlete.selected" (click)="selectAthlete(athlete)">+</div>
@@ -181,7 +181,7 @@
           [ngClass]="{injury: athlete.injury, overBudget: athlete.overBudget, selected: athlete.selected}">
           <div class="name"> {{ athlete.firstname }} {{ athlete.lastname }}</div>
           <div class="data">
-            <div class="price">{{ athlete.value | currency}} </div>
+            <div class="price">{{ athlete.value | currency: 'USD':'symbol':'1.0-0'}} </div>
             <div class="points">{{ athlete.totalpoints }}</div>
             <div class="pricePerPoint">{{ athlete.pricePerPoint }}</div>
             <div class="teamAction" *ngIf="!athlete.selected" (click)="selectAthlete(athlete)">+</div>
