--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -157,7 +157,7 @@
           <div class="pricePerPoint">Price Per Point</div>
           <div class="action">+/-</div>
         </li>
-        <li class="athlete" *ngFor="let athlete of filteredAthletes"
+        <li class="athlete" *ngFor="let athlete of filteredAthletes" title="{{athlete.roundsPoints | json}}"
           [ngClass]="{overBudget: athlete.overBudget, selected: athlete.selected}">
           <div class="name"> {{ athlete.firstname }} {{ athlete.lastname }}</div>
           <div class="price">{{ athlete.value | currency: 'USD':'symbol':'1.0-0'}} </div>
@@ -177,7 +177,7 @@
           <div class="pricePerPoint">Price Per Point</div>
           <div class="action">+/-</div>
         </li>
-        <li class="athlete" *ngFor="let athlete of data"
+        <li class="athlete" *ngFor="let athlete of data" title="{{athlete.roundsPoints | json}}"
           [ngClass]="{injury: athlete.injury, overBudget: athlete.overBudget, selected: athlete.selected}">
           <div class="name"> {{ athlete.firstname }} {{ athlete.lastname }}</div>
           <div class="data">
