--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -172,7 +172,7 @@
         <li class="athlete" *ngFor="let athlete of filteredAthletes" title="{{athlete.roundsPoints | json}} {{athlete.progressionScore | json}} {{athlete.roundValues}}"
           [ngClass]="{overBudget: athlete.overBudget, selected: athlete.selected}">
           <div class="name"> {{ athlete.firstname }} {{ athlete.lastname }}</div>
-          <div class="price">{{ athlete.value | currency: 'USD':'symbol':'1.0-0'}} </div>
+          <div class="price" [ngStyle]="{color: valueToRedBlackColor(athlete.progressionScore.weightedPriceDelta)}">{{ athlete.value | currency: 'USD':'symbol':'1.0-0'}} </div>
           <div class="points">{{ athlete.totalpoints }}</div>
           <div class="pricePerPoint">{{ athlete.pricePerPoint }}</div>
           <div class="teamAction" *ngIf="!athlete.selected" (click)="selectAthlete(athlete)">+</div>
@@ -193,7 +193,7 @@
           [ngClass]="{injury: athlete.injury, overBudget: athlete.overBudget, selected: athlete.selected}">
           <div class="name"> {{ athlete.firstname }} {{ athlete.lastname }}</div>
           <div class="data">
-            <div class="price">{{ athlete.value | currency: 'USD':'symbol':'1.0-0'}} </div>
+            <div class="price" [ngStyle]="{color: valueToRedBlackColor(athlete.progressionScore.weightedPriceDelta)}">{{ athlete.value | currency: 'USD':'symbol':'1.0-0'}} </div>
             <div class="points">{{ athlete.totalpoints }}</div>
             <div class="pricePerPoint">{{ athlete.pricePerPoint }}</div>
             <div class="teamAction" *ngIf="!athlete.selected" (click)="selectAthlete(athlete)">+</div>
