--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -173,7 +173,7 @@
           [ngClass]="{overBudget: athlete.overBudget, selected: athlete.selected}">
           <div class="name"> {{ athlete.firstname }} {{ athlete.lastname }}</div>
           <div class="price" [ngStyle]="{color: valueToRedBlackColor(athlete.progressionScore.weightedPriceDelta)}">{{ athlete.value | currency: 'USD':'symbol':'1.0-0'}} </div>
-          <div class="points">{{ athlete.totalpoints }}</div>
+          <div class="points" [ngStyle]="{color: valueTogreenBlackColor(athlete.progressionScore.weightedPointDelta)}"  >{{ athlete.totalpoints }}</div>
           <div class="pricePerPoint">{{ athlete.pricePerPoint }}</div>
           <div class="teamAction" *ngIf="!athlete.selected" (click)="selectAthlete(athlete)">+</div>
           <div class="teamAction" *ngIf="athlete.selected" (click)="deselectAthlete(athlete)">-</div>
@@ -194,7 +194,7 @@
           <div class="name"> {{ athlete.firstname }} {{ athlete.lastname }}</div>
           <div class="data">
             <div class="price" [ngStyle]="{color: valueToRedBlackColor(athlete.progressionScore.weightedPriceDelta)}">{{ athlete.value | currency: 'USD':'symbol':'1.0-0'}} </div>
-            <div class="points">{{ athlete.totalpoints }}</div>
+            <div class="points" [ngStyle]="{color: valueTogreenBlackColor(athlete.progressionScore.weightedPointDelta)}">{{ athlete.totalpoints }}</div>
             <div class="pricePerPoint">{{ athlete.pricePerPoint }}</div>
             <div class="teamAction" *ngIf="!athlete.selected" (click)="selectAthlete(athlete)">+</div>
             <div class="teamAction" *ngIf="athlete.selected" (click)="deselectAthlete(athlete)">-</div>
