--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -99,14 +99,18 @@
 
           <div class="filter-row totalPoints">
             <label> by total weightedPointDelta</label>
-            <input type="number" placeholder="{{minweightedPointDelta}}" [(ngModel)]="weightedPointDeltaFilter.min" (input)="applyFilters()" />
-            <input type="number" placeholder="{{maxweightedPointDelta}}" [(ngModel)]="weightedPointDeltaFilter.max" (input)="applyFilters()" />
+            <input type="number" min="{{minweightedPointDelta}}" step="0.1" placeholder="{{minweightedPointDelta}}" [(ngModel)]="weightedPointDeltaFilter.min"
+              (input)="applyFilters()" />
+            <input type="number" max="{{maxweightedPointDelta}}" step="0.1" placeholder="{{maxweightedPointDelta}}" [(ngModel)]="weightedPointDeltaFilter.max"
+              (input)="applyFilters()" />
           </div>
 
           <div class="filter-row totalPoints">
             <label> by total weightedPriceDelta</label>
-            <input type="number" placeholder="{{minweightedPriceDelta}}" [(ngModel)]="weightedPriceDeltaFilter.min" (input)="applyFilters()" />
-            <input type="number" placeholder="{{maxweightedPriceDelta}}" [(ngModel)]="weightedPriceDeltaFilter.max" (input)="applyFilters()" />
+            <input type="number"  step="1000" min="{{minweightedPriceDelta}}" placeholder="{{minweightedPriceDelta}}" [(ngModel)]="weightedPriceDeltaFilter.min"
+              (input)="applyFilters()" />
+            <input type="number"  step="1000" max="{{maxweightedPriceDelta}}" placeholder="{{maxweightedPriceDelta}}" [(ngModel)]="weightedPriceDeltaFilter.max"
+              (input)="applyFilters()" />
           </div>
 
           <div *ngFor="let round of rounds, index as i" class="filter-row">
@@ -118,10 +122,17 @@
         </div>
       </section>
       <section>
-        <h4 [ngClass]="{overBudget: sum>money}">Your Team {{sum | currency: 'USD':'symbol':'1.0-0'}}</h4>
-        <h4 [ngClass]="{overBudget: sum>money}">budget: {{budget | currency: 'USD':'symbol':'1.0-0'}}</h4>
+        <h4 [ngClass]="{overBudget: sum>money}">Your Team {{sum | currency: 'USD':'symbol':'1.0-0'}} - budget: {{budget
+          | currency: 'USD':'symbol':'1.0-0'}}</h4>
         <h4 class="errorMessage">{{errorMessage}}</h4>
-        
+        <h4 class="nrathletePerTeam">
+          <span
+            [ngClass]="{insuficient: nrWomenPerTeam/maxNrWomenPerTeam < 1, cool: nrWomenPerTeam/maxNrWomenPerTeam == 1, wrong: nrWomenPerTeam/maxNrWomenPerTeam > 1}">women
+            {{nrWomenPerTeam}} / {{maxNrWomenPerTeam}}</span><br> <span
+            [ngClass]="{insuficient: nrMenPerTeam/maxNrMenPerTeam < 1, cool: nrMenPerTeam/maxNrMenPerTeam == 1, wrong: nrMenPerTeam/maxNrMenPerTeam > 1}">
+            men {{nrMenPerTeam}} / {{maxNrMenPerTeam}}</span>
+        </h4>
+
         <ul class="athleteList" title="{{currentStats | json}}">
           <li class="athlete" *ngFor="let athlete of team">
             <div class="name">{{ athlete.firstname }} {{ athlete.lastname }}</div>
@@ -129,8 +140,8 @@
               <div class="price">{{ athlete.value | currency: 'USD':'symbol':'1.0-0'}} </div>
               <div class="points">{{ athlete.totalpoints }}</div>
               <div class="pricePerPoint">{{ athlete.pricePerPoint }}</div>
-              <div class="teamAction" *ngIf="!athlete.selected" (click)="selectAthlete(athlete)">+</div>
-              <div class="teamAction" *ngIf="athlete.selected" (click)="deselectAthlete(athlete)">-</div>
+              <div class="teamAction" *ngIf="!athlete.selected" (click)="actionAthlete(athlete)">+</div>
+              <div class="teamAction" *ngIf="athlete.selected" (click)="actionAthlete(athlete)">-</div>
             </div>
           </li>
         </ul>
@@ -141,9 +152,10 @@
         <h4>History</h4>
         <!-- historyTeams -->
         <ul class="athleteList" *ngFor="let team of historyTeams">
-          <div class="stats" title="{{team.stats | json}}">#{{team.number}} - stats / price: {{team.sum | currency: 'USD':'symbol':'1.0-0'}} leftovers: {{money-team.sum | currency: 'USD':'symbol':'1.0-0'}}</div>
-          
-          <li class="athlete"  title="{{team.stats | json}}" *ngFor="let athlete of team.data">
+          <div class="stats" title="{{team.stats | json}}">#{{team.number}} - stats / price: {{team.sum | currency:
+            'USD':'symbol':'1.0-0'}} leftovers: {{money-team.sum | currency: 'USD':'symbol':'1.0-0'}}</div>
+
+          <li class="athlete" title="{{team.stats | json}}" *ngFor="let athlete of team.data">
             <div class="name">{{ athlete.firstname }} {{ athlete.lastname }}</div>
             <div class="data">
               <div class="price">{{ athlete.value | currency: 'USD':'symbol':'1.0-0'}} </div>
@@ -169,14 +181,17 @@
           <div class="pricePerPoint">Price Per Point</div>
           <div class="action">+/-</div>
         </li>
-        <li class="athlete" *ngFor="let athlete of filteredAthletes" title="{{athlete.roundsPoints | json}} {{athlete.progressionScore | json}} {{athlete.roundValues}}"
+        <li class="athlete" *ngFor="let athlete of filteredAthletes"
+          title="{{athlete.roundsPoints | json}} {{athlete.progressionScore | json}} {{athlete.roundValues}}"
           [ngClass]="{overBudget: athlete.overBudget, selected: athlete.selected}">
           <div class="name"> {{ athlete.firstname }} {{ athlete.lastname }}</div>
-          <div class="price" [ngStyle]="{color: valueToRedBlackColor(athlete.progressionScore.weightedPriceDelta)}">{{ athlete.value | currency: 'USD':'symbol':'1.0-0'}} </div>
-          <div class="points" [ngStyle]="{color: valueTogreenBlackColor(athlete.progressionScore.weightedPointDelta)}"  >{{ athlete.totalpoints }}</div>
+          <div class="price" [ngStyle]="{color: valueToRedBlackColor(athlete.progressionScore.weightedPriceDelta)}">{{
+            athlete.value | currency: 'USD':'symbol':'1.0-0'}} </div>
+          <div class="points" [ngStyle]="{color: valueTogreenBlackColor(athlete.progressionScore.weightedPointDelta)}">
+            {{ athlete.totalpoints }}</div>
           <div class="pricePerPoint">{{ athlete.pricePerPoint }}</div>
-          <div class="teamAction" *ngIf="!athlete.selected" (click)="selectAthlete(athlete)">+</div>
-          <div class="teamAction" *ngIf="athlete.selected" (click)="deselectAthlete(athlete)">-</div>
+          <div class="teamAction" *ngIf="!athlete.selected" (click)="actionAthlete(athlete)">+</div>
+          <div class="teamAction" *ngIf="athlete.selected" (click)="actionAthlete(athlete)">-</div>
         </li>
       </ul>
     </section>
@@ -189,15 +204,19 @@
           <div class="pricePerPoint">Price Per Point</div>
           <div class="action">+/-</div>
         </li>
-        <li class="athlete" *ngFor="let athlete of data" title="{{athlete.roundsPoints | json}} {{athlete.progressionScore | json}} {{athlete.roundValues}}"
+        <li class="athlete" *ngFor="let athlete of data"
+          title="{{athlete.roundsPoints | json}} {{athlete.progressionScore | json}} {{athlete.roundValues}}"
           [ngClass]="{injury: athlete.injury, overBudget: athlete.overBudget, selected: athlete.selected}">
           <div class="name"> {{ athlete.firstname }} {{ athlete.lastname }}</div>
           <div class="data">
-            <div class="price" [ngStyle]="{color: valueToRedBlackColor(athlete.progressionScore.weightedPriceDelta)}">{{ athlete.value | currency: 'USD':'symbol':'1.0-0'}} </div>
-            <div class="points" [ngStyle]="{color: valueTogreenBlackColor(athlete.progressionScore.weightedPointDelta)}">{{ athlete.totalpoints }}</div>
+            <div class="price" [ngStyle]="{color: valueToRedBlackColor(athlete.progressionScore.weightedPriceDelta)}">{{
+              athlete.value | currency: 'USD':'symbol':'1.0-0'}} </div>
+            <div class="points"
+              [ngStyle]="{color: valueTogreenBlackColor(athlete.progressionScore.weightedPointDelta)}">{{
+              athlete.totalpoints }}</div>
             <div class="pricePerPoint">{{ athlete.pricePerPoint }}</div>
-            <div class="teamAction" *ngIf="!athlete.selected" (click)="selectAthlete(athlete)">+</div>
-            <div class="teamAction" *ngIf="athlete.selected" (click)="deselectAthlete(athlete)">-</div>
+            <div class="teamAction" *ngIf="!athlete.selected" (click)="actionAthlete(athlete)">+</div>
+            <div class="teamAction" *ngIf="athlete.selected" (click)="actionAthlete(athlete)">-</div>
           </div>
         </li>
       </ul>
