--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -65,6 +65,10 @@ h4.nrathletePerTeam{
     display: flex;
     justify-content: center;
     align-items: flex-start;
+
+    background-image: url('/assets/bg.jpg');
+    background-repeat: no-repeat;
+    background-color: black;
 }
 
 .right-side {
@@ -136,6 +140,16 @@ ul {
             color: white
         }
     }
+}
+
+.history, .currentTeam{
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 12px;
+    background-color: #f9f9f9;
+    font-family: Arial, sans-serif;
 }
 
 .filters {
