--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -62,6 +62,7 @@ h4.nrathletePerTeam{
 
 .left-side {
     width: 25%;
+    min-width: 650px;
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -72,7 +73,7 @@ h4.nrathletePerTeam{
 }
 
 .right-side {
-    width: calc(100% - 20% - 16px);
+    width: calc(100% - 25% - 16px);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -82,7 +83,7 @@ h4.nrathletePerTeam{
             text-align: center;
         }
 
-        width: 50%;
+        width: 100%;
     }
 }
 
