--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -138,6 +138,8 @@ ul {
 
         &.selected {
             background-color: black;
+            background: linear-gradient(90deg,rgba(0, 0, 0, 1) 0%, rgba(255, 255, 255, 1) 20%, rgba(255, 255, 255, 1) 65%, rgba(0, 0, 0, 1) 100%);
+
             color: white
         }
     }
