--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -105,6 +105,24 @@ ul {
             border-bottom: 1px solid red;
         }
 
+        .insta {
+            display: inline-block;
+            height: 13px;
+            width: 13px;
+            background-image: url('/assets/insta.svg');
+            background-repeat: no-repeat;
+            background-size: cover;
+            margin-left: 5px;
+            a{
+                display: block;
+                width: 100%;
+                height: 100%;
+                text-decoration: none;
+                color: transparent;
+                background-color: transparent;
+            }
+        }
+
         display: flex;
         justify-content: space-between;
 
